Added dragndrop cards functioniality and ui for list and card

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,1 +1,10 @@
-<p>board works!</p>
+<div cdkDropListGroup>
+    <div class="example-container" *ngFor="let list of lists">
+        <h1>{{list.name}}</h1>
+        <app-list [cards]="list.cards"></app-list>
+    </div>
+</div>
+<div>
+    <input type="text" #newListInput />
+    <button (click)="addList(newListInput.value); newListInput.value = ''">Add list</button>
+</div>
