--- a/src/app/board/list/list.component.css
+++ b/src/app/board/list/list.component.css
@@ -1,15 +1,30 @@
+.list-wrap {
+    border: 1px solid rgba(0, 0, 0, 0.253);
+    margin-right: 15px;
+    background-color: #ebecf080;
+}
+
 .list {
     border: solid 1px #ccc;
-    min-height: 60px;
-    background: white;
     border-radius: 4px;
     overflow: hidden;
     display: block;
 }
 
+.card p {
+    margin-bottom: 0;
+}
+
+.list-name {
+    text-align: center;
+    font-size: 20px;
+    padding: 5px 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.397);
+}
+
 .card {
-    padding: 20px 10px;
-    border-bottom: solid 1px #ccc;
+    padding: 10px;
+    border: solid 1px rgba(204, 204, 204, 0.24);
     color: rgba(0, 0, 0, 0.87);
     display: flex;
     flex-direction: row;
@@ -17,8 +32,14 @@
     justify-content: space-between;
     box-sizing: border-box;
     cursor: move;
-    background: white;
     font-size: 14px;
+    margin-bottom: 5px;
+    background-color: white;
+}
+
+.empty-card-text {
+    text-align: center;
+    font-style: italic;
 }
 
 .list.cdk-drop-list-dragging .card:not(.cdk-drag-placeholder) {
@@ -30,6 +51,7 @@
 }
 
 .cardGenerator input[type="text"] {
-    padding: 10px;
+    padding: 2px 10px;
     width: 100%;
+    border: none;
 }
