--- a/src/app/board/list/list.component.html
+++ b/src/app/board/list/list.component.html
@@ -1,10 +1,13 @@
-<div cdkDropList [cdkDropListData]="cards" class="list" (cdkDropListDropped)="drop($event)">
-    <div class="card" *ngFor="let item of cards; let i = index " cdkDrag>
-        <p>{{item.subject}}</p>
-        <button (click)="deleteCard(i)">X</button>
+<div class="list-wrap">
+    <div cdkDropList [cdkDropListData]="cards" class="list" (cdkDropListDropped)="drop($event)">
+        <p class="list-name">{{name}}</p>
+        <div class="card" *ngFor="let item of cards; let i = index " cdkDrag>
+            <p>{{item.subject}}</p>
+            <button (click)="deleteCard(i)">X</button>
+        </div>
     </div>
     <div class="cardGenerator">
-        <input type="text" [(ngModel)]="name" />
-        <button (click)="createCard()">Submit</button>
+        <input placeholder="Subject.." type="text" [(ngModel)]="newCardName" />
+        <button (click)="createCard()">Add</button>
     </div>
 </div>
