breack card component, unfinished

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -4,6 +4,6 @@
     </div>
     <div class="newList">
         <input type="text" #newListInput />
-        <button (click)="addList(newListInput.value); newListInput.value = ''">Add list</button>
+        <button (click)="onAddList(newListInput)">Add list</button>
     </div>
 </div>
