--- a/src/app/board/list/list.component.css
+++ b/src/app/board/list/list.component.css
@@ -11,10 +11,6 @@
     display: block;
 }
 
-.card p {
-    margin-bottom: 0;
-}
-
 .list-name {
     text-align: center;
     font-size: 20px;
@@ -22,29 +18,10 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.397);
 }
 
-.card {
-    padding: 10px;
-    border: solid 1px rgba(204, 204, 204, 0.24);
-    color: rgba(0, 0, 0, 0.87);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    box-sizing: border-box;
-    cursor: move;
-    font-size: 14px;
-    margin-bottom: 5px;
-    background-color: white;
-}
-
-.empty-card-text {
-    text-align: center;
-    font-style: italic;
-}
-
-.list.cdk-drop-list-dragging .card:not(.cdk-drag-placeholder) {
+/* working progress */
+/* .list.cdk-drop-list-dragging .appCard:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
+} */
 
 .cardGenerator {
     display: flex;
